@@ -1,5 +1,7 @@
 2011-07-04  Meteor Liu  <meteor1113@gmail.com>
 
+	* init-misc.el ("tabbar"): Fix tabbar-ruler' face family.
+
 	* init-basic.el (grep-dir-format): Use default grep option in gnu/linux.
 
 2011-07-03  Meteor Liu  <meteor1113@gmail.com>
